# RSS-Simulator

./: .bashrc  README.md
catkin_ws/: RSS_world.world  frames.gv  functions.sh
catkin_ws/devel/: .catkin  local_setup.sh
catkin_ws/devel/include/solenoid_ctrl/: solenoid_status.h
catkin_ws/devel/include/turtle_movement_simulator/: imu.h
catkin_ws/devel/lib/learning_tf2/: turtle_tf2_broadcaster  turtle_tf2_listener
catkin_ws/devel/lib/pkgconfig/: gazebo_tutorials.pc  learning_joy.pc  learning_tf2.pc  rrbot_control.pc  rrbot_description.pc  rrbot_gazebo.pc  solenoid_ctrl.pc  turtle_movement_simulator.pc  turtlebot3_bringup.pc  turtlebot3_description.pc  turtlebot3_example.pc  turtlebot3_fake.pc  turtlebot3_gazebo.pc  turtlebot3_msgs.pc  turtlebot3_navigation.pc  turtlebot3_slam.pc  turtlebot3_teleop.pc  uuv_assistants.pc  uuv_auv_control_allocator.pc  uuv_control_cascaded_pid.pc  uuv_control_msgs.pc  uuv_control_utils.pc  uuv_descriptions.pc  uuv_gazebo.pc  uuv_gazebo_plugins.pc  uuv_gazebo_ros_plugins.pc  uuv_gazebo_ros_plugins_msgs.pc  uuv_gazebo_worlds.pc  uuv_sensor_ros_plugins.pc  uuv_sensor_ros_plugins_msgs.pc  uuv_teleop.pc  uuv_thruster_manager.pc  uuv_trajectory_control.pc  uuv_tutorial_disturbances.pc  uuv_tutorial_dp_controller.pc  uuv_tutorial_seabed_world.pc  uuv_world_plugins.pc  uuv_world_ros_plugins.pc  uuv_world_ros_plugins_msgs.pc
catkin_ws/devel/lib/turtle_movement_simulator/: rss_follow  rss_movement  rss_physics_test  rss_translation_waypoint  turtle_movement  turtle_movement_gazebo
catkin_ws/src/gazebo_plugins/: CMakeLists.txt  imu_plugin.cc  mainpage.dox  manifest.xml  model_push.cc  model_push.world  model_push_backup.cc  package.xml
catkin_ws/src/learning_joy/: package.xml
catkin_ws/src/learning_tf2/: CMakeLists.txt  package.xml
catkin_ws/src/solenoid_ctrl/: CMakeLists.txt  package.xml
catkin_ws/src/solenoid_ctrl/launch/: solenoid_ctrl.launch  solenoid_ctrl_with_controller.launch
catkin_ws/src/solenoid_ctrl/msg/: solenoid_status.msg
catkin_ws/src/solenoid_ctrl/scripts/: key_sub.py  sol_ctrl.py  sol_ctrl_2.py
catkin_ws/src/turtle_movement_simulator/: CMakeLists.txt  package.xml
catkin_ws/src/turtle_movement_simulator/launch/: RSS_world.world  turtle_movement.launch  turtle_movement_cpp.launch
catkin_ws/src/turtle_movement_simulator/scripts/: turtle_movement.py
catkin_ws/src/turtle_movement_simulator/src/: rss_follow.cpp  rss_movement.cpp  rss_physics_test.cpp  rss_translation_waypoint.cc  turtle_movement.cpp  turtle_movement_gazebo.cpp
gazebo_plugin_tutorial/: Debris_IMU_plugin.cc  hello_world.cc  world_edit.cc  world_edit.world
model_editor_models/RSS/: model.config  model.sdf
model_editor_models/RSS_Debris/: model.config  model.sdf
model_editor_models/RSS_NO_BEARINGS/: model.config  model.sdf
model_editor_models/RSS_V2/: model.config  model.sdf
model_editor_models/chaotic_walker/: model.config  model.sdf
model_editor_models/first_car/: model.config  model.sdf
(+47 files in other folders)
