<?xml version="1.0"?>
<package format="2">
  <name>model_push</name>
  <version>0.0.0</version>
  <description>The turtle_movement_simulator package</description>
  <maintainer email="jasperbengrant@gmail.com">rss-user-2</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>geometry_msgs</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>gazebo_ros</build_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>turtle_movement_simulator</build_depend>
  <build_export_depend>geometry_msgs</build_export_depend>
  <build_export_depend>roscpp</build_export_depend>
  <build_export_depend>gazebo_ros</build_export_depend>
  <build_export_depend>message_generation</build_export_depend>
  <build_export_depend>turtle_movement_simulator</build_export_depend>
  <exec_depend>geometry_msgs</exec_depend>
  <exec_depend>roscpp</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>message_runtime</exec_depend>
  <exec_depend>turtle_movement_simulator</exec_depend>


  <export>

  </export>
</package>
