<?xml version="1.0"?>
<package format="2">
  <name>solenoid_ctrl</name>
  <version>0.0.0</version>
  <description>The solenoid_ctrl package</description>

  <maintainer email="adrcrusader@todo.todo">adrcrusader</maintainer>
  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>

  <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend>

  <export>
  </export>
</package>
